<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard"/>
    <item android:id="@+id/nav_add_expense"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/nav_add_expense"/>
    <item android:id="@+id/nav_expenses"
        android:icon="@drawable/ic_list"
        android:title="@string/nav_expenses"/>
    <item android:id="@+id/nav_categories"
        android:icon="@drawable/ic_category"
        android:title="@string/nav_categories"/>
    <item android:id="@+id/nav_budget_goals"
        android:icon="@drawable/ic_target"
        android:title="@string/nav_budget_goals"/>
    <item android:id="@+id/nav_analytics"
        android:icon="@drawable/ic_analytics"
        android:title="@string/nav_analytics"/>

    <!-- NEW: Achievements / Gamification -->
    <item android:id="@+id/nav_gamification"
        android:icon="@drawable/ic_wallet"
        android:title="Achievements"/>

    <!-- Divider group for logout -->
    <group android:id="@+id/group_bottom">
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout"/>
    </group>
</menu>